# Sokoban

./: CMakeLists.txt  Game.cpp  Game.h  Icon.h  Map.cpp  Map.h  Operation.h  Player.cpp  Player.h  Position.cpp  Position.h  Session.cpp  Session.h  plan
console/: ConsoleBoardUtil.cpp  ConsoleBoardUtil.h  autoTest.cpp  main.cpp
test/: testmap1
